--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="participant">
             <h3>Scrum Master / Equipo de desarrollo Yuritzy Nicol Martínez Segoviano</h3>
-            <img src="./img/Cristian Jonathan Juárez Ruiz.jpeg" alt="perfil" class="profile-img">
+            <img src="./img/Yuritzy Nicol Martínez Segoviano.jpeg" alt="perfil" class="profile-img">
             <p>¡Hola!,Soy Yuritzy Nicol Martínez Segoviano Nacida en Ciudad de Mexico, tengo una carrera Tecnica en 
               Procesos Industriales y actualmente soy Egresada de la carrera de Ingeniera Petrolera en la ESIA Ticoman.</p>
           </div>
