--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
           <div class="participant">
             <h3> Product Owner / Scrum Master / Equipo de desarrollo Dámaris Silva Rayas</h3>
             <img src="./img/Dámaris Silva Rayas.jpeg" alt="perfil" class="profile-img">
-            <p>¡Hola!, Soy Nací un invierno de 1996. 
-              ¡Hola!, Tengo una ingeniería en informática y una Maestría en 
+            <p>¡Hola!, Soy Dámaris Silva Rayas Nací un invierno de 1996. 
+              Tengo una ingeniería en informática y una Maestría en 
               Ciencia de Datos dónde me he desempeñado en el campo de la 
               analítica de los datos para empresas internacionales como mexicanas. 
               Actualmente estoy en un bootcamp de Generation México aprendiendo lo que 
