Cambio de "Hola"
pujada 5

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="participant">
             <h3>Scrum Master / Equipo de desarrollo Cristian Jonathan Juárez Ruiz</h3>
             <img src="./img/Cristian Jonathan Juárez Ruiz.jpeg" alt="perfil" class="profile-img">
-            <p>¡Hola!, Nací el 23 de noviembre de 1994. Crecí en Naucalpan, Estado de México con mis padres 
+            <p>¡Hola!, Soy Cristian Jonathan Juárez Ruiz Nací el 23 de noviembre de 1994. Crecí en Naucalpan, Estado de México con mis padres 
               (María y Miguel) y mis hermanos (Miguel y Uriel). Estudié Ciencias de la Comunicación en el Centro de 
               Estudios Superiores en Ciencias Jurídicas y Criminológicas y he trabajado en el medio durante 7 años. 
               Actualmente estudio Desarrollo Java Fullstack en Generation y me emociona (aunque también me atemoriza) 
@@ -159,7 +159,7 @@
           <div class="participant">
             <h3>Scrum Master / Equipo de desarrollo Jonathan Xavier Hernández Ortega</h3>
             <img src="./img/Jonathan Xavier Hernández Ortega.jpeg" alt="perfil" class="profile-img">
-            <p>¡Hola!, Nacido en 1996 en Alvaro Obregon me crie por la zona, asisti al kínder privado Alexander 
+            <p>¡Hola!, Soy Jonathan Xavier Hernández Ortega Nacido en 1996 en Alvaro Obregon me crie por la zona, asisti al kínder privado Alexander 
             Dull los primeros 2 años, Posteriormente termine el kinder n el Lauro Aguirre, curse primer y 
             parte del  segundo año de primaria en la Guadalupe Victoria pero posteriormente fui transferido a 
             la Primaria Zambia donde termine(y sufri) mis peores años, curse toda la secundaria en la Diurna 
