--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="participant">
             <h3>Scrum Master / Equipo de desarrollo Uriel Sergio Chávez Barajas</h3>
             <img src="./img/Uriel Chávez.jpeg" alt="perfil" class="profile-img">
-            <p>¡Hola!, Soy Arquitecto y diseñador mexicano, chilango, amante de las jacarandas y la ciudad, me ha 
+            <p>¡Hola!, Uriel Sergio Chávez Barajas Soy Arquitecto y diseñador mexicano, chilango, amante de las jacarandas y la ciudad, me ha 
               apasionado desde temprana edad poder materializar y representar mis ideas de manera plástica y visual. 
               Esta misma inquietud me ha orillado actualmente a aprender el diseño y 
               desarrollo de páginas y aplicaciones web en el curso de Desarrollador Java Full Stack en Generation.</p>
@@ -99,7 +99,7 @@
           <div class="participant">
             <h3>Scrum Master / Equipo de desarrollo Yuritzy Nicol Martínez Segoviano</h3>
             <img src="./img/Yuritzy Nicol Martínez Segoviano.jpeg" alt="perfil" class="profile-img">
-            <p>¡Hola!,Soy Yuritzy Nicol Martínez Segoviano Nacida en Ciudad de Mexico, tengo una carrera Tecnica en 
+            <p>¡Hola!, Soy Yuritzy Nicol Martínez Segoviano Nacida en Ciudad de Mexico, tengo una carrera Tecnica en 
               Procesos Industriales y actualmente soy Egresada de la carrera de Ingeniera Petrolera en la ESIA Ticoman.</p>
           </div>
         </div>
@@ -107,7 +107,7 @@
           <div class="participant">
             <h3>Scrum Master / Equipo de desarrollo Abraham jimenez Valdes</h3>
             <img src="./img/fotodeperfil.jpg" alt="perfil" class="profile-img">
-            <p>¡Hola!,Soy Brand. Soy Ingeniero en Gestión de Sistemas por la Universidad de Guanajuato, Licenciado en Derecho Penal por la UAM y Licenciado en Administración de Empresas por la UNAM. Tengo una amplia experiencia laboral en corporativos. Mis gustos son muy variados pero simples: me encanta ver series, jugar juegos de estrategia o simuladores, y 
+            <p>¡Hola!, Soy Brand. Soy Ingeniero en Gestión de Sistemas por la Universidad de Guanajuato, Licenciado en Derecho Penal por la UAM y Licenciado en Administración de Empresas por la UNAM. Tengo una amplia experiencia laboral en corporativos. Mis gustos son muy variados pero simples: me encanta ver series, jugar juegos de estrategia o simuladores, y 
               pasar tiempo con mis perros. Disfruto del silencio y de los pequeños placeres de la vida..</p>
           </div>
         </div>
